# my-pet

./: .env  PLAN.md  README.md  index.html  package-lock.json  package.json  run.bat  run.sh  setup.bat  setup.sh  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: Orb.tsx  SpeechBubble.tsx  Timer.tsx
src/hooks/: useDrag.ts
src/services/: llm.ts  state.ts  timer.ts
src/styles/: orb.css
